monkey patch toto to change archives to 'blog'

--- a/templates/layout.haml
+++ b/templates/layout.haml
@@ -19,7 +19,7 @@
         %a.fa.fa-2x.fa-github{:href => "http://github.com/dmcinnes", :title => "Github"}
         %a.fa.fa-2x.fa-twitter{:href => "http://twitter.com/DougMcInnes", :title => "Twitter"}
         %a.fa.fa-2x.fa-at{:href => "mailto:doug@dougmcinnes.com", :title => "Email"}
-        %a.fa.fa-2x.fa-exclamation-circle{:href => "/archives", :title => "Blog"}
+        %a.fa.fa-2x.fa-exclamation-circle{:href => "/blog", :title => "Blog"}
         %a.fa.fa-2x.fa-question-circle{:href => "/about", :title => "About"}
 
     %section.container
