--- a/public/css/main.css
+++ b/public/css/main.css
@@ -7,7 +7,7 @@ html {
 }
 
 body {
-  background-color: rgba(255,255,255,0.5);
+  background-color: rgba(255,255,255,0);
 }
 
 a {
@@ -15,13 +15,18 @@ a {
 }
 
 a:hover {
-  color: #334
+  color: #641;
+  text-decoration: none;
 }
 
 .page-header {
   border: none;
+  background-color: rgba(238,238,238,0.5);
+  padding-bottom: 3ex;
+  margin-bottom: 40px;
 }
 
-.page-header a:hover {
-  text-decoration: none;
+body.blog .content {
+  padding-top: 5ex;
+  background-color: #EEE;
 }
