--- a/templates/layout.haml
+++ b/templates/layout.haml
@@ -24,7 +24,7 @@
             %a.fa.fa-2x.fa-exclamation-circle{:href => "/blog", :title => "Blog"}
             %a.fa.fa-2x.fa-question-circle{:href => "/about", :title => "About"}
 
-    %section.container.content
+    %section.container.main-content
       .row.col-md-8.col-md-offset-1
         = yield
 
