fix html5 asteriods and welcome visitors articles

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -63,3 +63,11 @@ article section.comments {
 footer {
   padding: 3ex;
 }
+
+figure {
+  margin: 4ex;
+}
+
+figure figcaption {
+  margin-top: 1ex;
+}
