--- a/public/css/main.css
+++ b/public/css/main.css
@@ -10,13 +10,13 @@ body {
   background-color: rgba(255,255,255,0);
 }
 
-a {
+a, a:visited, a:active, a:focus, a:hover {
   color: #333;
+  text-decoration: none;
 }
 
 a:hover {
   color: #641;
-  text-decoration: none;
 }
 
 .page-header {
