--- a/templates/pages/about.haml
+++ b/templates/pages/about.haml
@@ -1,1 +1,43 @@
-Bunny Voice, Father, Software Engineer, Electronics Dabbler, Game Creator, Enthusiast, Trifler
+%section.content
+  %section
+    %h5
+      Hi!
+
+    %p
+      I am Doug McInnes.
+    %p
+      I am a father and a software enginner. I mostly work in Ruby and Javascript. I also play board games and play around with electronics.
+
+  %section
+    I also do bunny voices for
+    %a{:href => "http://angryalien.com"}
+      The 30-Second Bunnies Theatre.
+
+  %section
+    %h5
+      Notable creations:
+    %ul
+      %li
+        %strong
+          %a{:href => "http://github.com/att-cloud/daylight"} Daylight
+        &mdash; Extensions to Rails to get ActiveResource to function more like ActiveRecord
+      %li
+        %strong
+          %a{:href => "http://yp-engineering.github.com/jcov/"} JCov
+        &mdash; Lightweight, Headless Javascript Test Runner that Reports Code Coverage
+
+  %section
+    %h5
+      I've also created a few Javascript games:
+    %ul
+      %li
+        %strong
+          %a{:href => "http://deadvalleygame.com"} Dead Valley
+        &mdash; HTML5 GTA-style Zombie Survival Game
+        (
+        %a{:href => "http://github.com/dmcinnes/dead-valley"}<>
+          source
+        )
+      %li
+        %strong
+          %a{:href => "dougmcinnes.com/2010/05/12/html-5-asteroids/"} HTML5 Asteroids
