I'm an engineer and a husband too

--- a/templates/pages/about.haml
+++ b/templates/pages/about.haml
@@ -6,7 +6,7 @@
     %p
       I am Doug McInnes.
     %p
-      I am a father and a software enginner. I mostly work in Ruby and Javascript. I also play board games and play around with electronics.
+      I am a father, husband, and software engineer. I mostly work in Ruby and Javascript. I also play board games and play around with electronics.
 
   %section
     I also do bunny voices for
