fix HTML5 Asteroids link on about page

--- a/templates/pages/about.haml
+++ b/templates/pages/about.haml
@@ -40,4 +40,4 @@
         )
       %li
         %strong
-          %a{:href => "dougmcinnes.com/2010/05/12/html-5-asteroids/"} HTML5 Asteroids
+          %a{:href => "/2010/05/12/html-5-asteroids/"} HTML5 Asteroids
