add discus count js

--- a/templates/pages/blog.haml
+++ b/templates/pages/blog.haml
@@ -22,3 +22,12 @@
       %li
         %h5
           %a{:href => entry.path}= entry.title
+
+:javascript
+  var disqus_shortname = 'dougmcinnes';
+  (function () {
+  var s = document.createElement('script'); s.async = true;
+  s.type = 'text/javascript';
+  s.src = '//' + disqus_shortname + '.disqus.com/count.js';
+  (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+  }());
