--- a/templates/pages/about.haml
+++ b/templates/pages/about.haml
@@ -6,7 +6,7 @@
     %p
       I am Doug McInnes.
     %p
-      I am a father, husband, and software engineer. I mostly work in Ruby and Javascript. I also play board games and play around with electronics.
+      I am a father, husband, and software engineer. I mostly work in Ruby and Javascript. I also play board games and tinker with electronics.
 
   %section
     I also do bunny voices for
@@ -20,11 +20,11 @@
       %li
         %strong
           %a{:href => "http://github.com/att-cloud/daylight"} Daylight
-        &mdash; Extensions to Rails to get ActiveResource to function more like ActiveRecord
+        &mdash; Extensions to Rails to get ActiveResource to function more like ActiveRecord.
       %li
         %strong
           %a{:href => "http://yp-engineering.github.com/jcov/"} JCov
-        &mdash; Lightweight, Headless Javascript Test Runner that Reports Code Coverage
+        &mdash; Lightweight, Headless Javascript Test Runner that Reports Code Coverage.
 
   %section
     %h5
@@ -33,9 +33,17 @@
       %li
         %strong
           %a{:href => "http://deadvalleygame.com"} Dead Valley
-        &mdash; HTML5 GTA-style Zombie Survival Game
+        &mdash; HTML5 GTA-style Zombie Survival Game.
         (
         %a{:href => "http://github.com/dmcinnes/dead-valley"}<>
+          source
+        )
+      %li
+        %strong
+          %a{:href => "http://dod.dogwatchgames.com/"} Dungeon of D
+        &mdash; Single Player Dungeon Crawl Card Game.
+        (
+        %a{:href => "https://github.com/dmcinnes/DoD"}<>
           source
         )
       %li
